# speccify

./: .gitignore  CHANGELOG  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yml  test.yml
src/speccify/: __init__.py  decorator.py  exceptions.py  generator.py  typing.py
tests/: conftest.py  helpers.py  test_decorator.py  test_generator.py  test_settings.py  test_types.py
