[tool.poetry]
name = "speccify"
version = "0.1.0"
description = "Tie together `drf-spectacular` and `djangorestframework-dataclasses` for easy-to-use apis and openapi schemas."
authors = ["Lyst Ltd. <devs@lyst.com>"]

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = "*"
djangorestframework-dataclasses = "*"
drf-spectacular = "*"
typing-extensions = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
